fix: Navbar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     --background: #13092b;
     --background-2: #090f2b;
     --foreground: #ddd;
+    --foreground-bright: #fff;
     --foreground-dim: #aaa;
     --error: orange;
     --accent: #f9027a;
@@ -57,13 +58,21 @@ h1 {
     max-width: 100vw;
 }
 
+.site-header {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .nav {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     margin: 16px;
     width: 100%;
     max-width: 720px;
     align-items: center;
+    justify-content: space-around;
 }
 
 .nav-link {
@@ -72,6 +81,10 @@ h1 {
     font-weight: 500;
     text-decoration: none;
     color: var(--foreground-dim);
+}
+
+.nav-link:hover {
+    color: var(--foreground);
 }
 
 .nav-link::before {
@@ -85,7 +98,7 @@ h1 {
 }
 
 .nav-link.active {
-    color: var(--foreground);
+    color: var(--foreground-bright);
 }
 
 .nav-link.active::before {
